src/static/css/app_style.css
body {
    color: #555;
    font-family: 'Raleway', 'Arial', sans-serif;
    font-weight: 400;
    text-rendering: optimizeLegibility;
}

/*------------------------------*/
/*-----REUSABLE COMPONENTS ------*/
/*------------------------------*/

/*-----Main Nav ------*/
.navbar {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.6)), to(rgba(0, 0, 0, 0.7))), url(../images/hokiestone_blur_full.jpg);
    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url(../images/hokiestone_blur_full.jpg);
    border-bottom: 7px solid #f60;
    height: 100px;

 }

.scroll-navbar li{
    display: none;
}

/*-----Sticky Nav ------*/
.sticky {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background-color: rgba(102, 0, 0, 0.97);
    background-image: none;
    border-bottom: 7px solid #600;
    z-index: 9999;
    box-shadow: 0px 2px 2px #ccc;
}

.sticky .scroll-navbar {
    float: right;
    list-style: none;
    width: 70%;
    margin: 0px auto;
}

.sticky .scroll-navbar li{
    display: inline-block;
    margin-left: 11%;
}

.sticky .scroll-navbar li:first-child{
    display: inline-block;
    margin-left: 70px;
}

.sticky .scroll-navbar li a:link,
.sticky .scroll-navbar li a:visited{
    text-align: center;
    text-decoration: none;
    padding: 8px 0;
    color: #fff;
    text-transform: uppercase;
    border-bottom: 2px solid transparent;
    font-weight: 600;
}

.sticky .scroll-navbar li a:hover,
.sticky .scroll-navbar li a:active{
    text-align: center;
    text-decoration: none;
    padding: 8px 0;
    color: #fff;
    text-transform: uppercase;
    border-bottom: 2px solid #f60;
    font-weight: 600;
}

.container {
    margin-top: 130px;
}

.logo {
    height: auto;
    width: 100px;
}

.profile-icon-anchor:link,
.profile-icon-anchor:visited {
    margin-top: 5px;
    text-decoration: none;
    color: #fff;
    margin-right: 25px;
}

.profile-icon-anchor:hover,
.profile-icon-anchor:active {
    text-decoration: none;
    color: #f60;
    margin-right: 25px;
}

.my-profile-icon {
    font-size: 300%;
}

.card {
    /* Add shadows to create the "card" effect */
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
}


/*------------------------------*/
/*-----HEADINGS ------*/
/*------------------------------*/
h1 {
    color: #600;
}

.game-detail-header h1:after{
   display: block;
    height: 3px;
    background-color: #f60;
    content: " ";
    width: 200px;
    margin: 0 auto;
    margin-top: 30px; 
}


/*-------DASHBOARD INPUTS ------*/
.dashboard-label {
    margin-left: 15px;
    width: 35px;
    float: left;
    font-weight: 600;
}

.dashboard-input {
    width: 45px;
    margin: 0px 15px;
    padding: .375rem .4rem;
    float: left;
    text-align: center;
}

.dashboard-input-oppt {
    float: left;
}

/*------------------------------*/
/*-----TABLES ------*/
/*------------------------------*/
.table-sm td, .table-sm th {
    padding: .375rem;
}

th {
    font-weight: 600;
}

 tbody {
    font-size: 90%;
 }

 del {
     padding: .375rem 0rem;
 }

/*------------------------------*/
/*-----NAVIGATION ELEMENTS ------*/
/*------------------------------*/

.nav-pills {
    margin-bottom: 20px;
}

.nav-pills .nav-link{
    background: #fff;
    color: #660000;
    border: #ff6600 1px solid;
}

.nav-pills .nav-link.active{
    background: #660000;
    color: #fff;
}

/*------------------------------*/
/*-----BUTTONS ------*/
/*------------------------------*/

.btn:link,
.btn:visited {
    /*padding: 10px 10px;*/
    padding: .375rem .75rem;
    font-size: 90%;
}

a.btn.btn-full{
    margin-right: 0px;
}

 .btn-outline-orange {
    color:#660000;
    background-color:#fff;
    border:#ff6600 1px solid;
 }


/*------------------------*/
/*---GAME DETAIL SECTION ---*/
/*------------------------*/
.dashboard-title {
    margin-bottom: 0px;
}

.game-detail-top {
    height: 90vh;
    box-shadow: 2px 2px 2px #ccc;
}

.btn-back {
    margin-bottom: 40px;
}

.game-detail:after {
    display: block;
    height: 3px;
    background-color: #f60;
    content: " ";
    width: 200px;
    margin: 0 auto;
    margin-top: 30px;
}

.game-detail-title {
    margin: 10px 0px;
}

.game-detail h3 {
    height: 50px;
}

.game-detail p{
    text-align: center;
    height: 100px;
    margin-top: 15px;
}

.game-details {
    margin-top: 20px;
}

.game-logos {
    padding-top: 0px;
    margin-top: 0px;
    line-height: 130px;
    height: 130px;
    text-align: center;
}

.game-teams h2{
    margin-bottom: 5px;
}

.collapse-at {
    height: 35px;
}

.game-details p {
    width: 100px;
}

.game-details p.subject {
    font-weight: 600;
    display: inline;
}

.game-details p.details {
    display: inline;
}

/*------------------------*/
/*---GAME PREVEW SECTION ---*/
/*------------------------*/

.game-detail-section-light,
.game-detail-section-dark {
    height: 90vh;
    box-shadow: 2px 2px 2px #ccc;
}

.section-attendance {
    height: 180vh;
}

.game-detail-section-dark {
    background-color: rgba(221, 221, 221, 0.26);
}

.game-detail-section-light {
    background-color: #fff;
}

.game-detail-btn {
    margin-bottom: 20px;
    font-size: 90%;
    padding: .375rem .75rem;
}

/*------------------------*/
/*---ATTENDANCE LISTING ---*/
/*------------------------*/

.attendance-listing {
    margin-top: 15px;
}

.attendance-yes,
.attendance-maybe,
.attendance-no {
    padding-top: 30px;
    height: 150vh;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}

.attendance-yes {
    background-color: rgba(102, 0, 0, 0.60);
    color: #FFF;

}

.attendance-maybe {
    color: #000;
}

.attendance-no {
    background-color: rgba(255, 102, 0, 0.63);
    color: #FFF;
}

.attendance-yes p,
.attendance-maybe p,
.attendance-no p{
    text-align: center;
    font-weight: 600;
    font-size: 110%;
    height: 40px;
}

.icon-big-yes {
    color: #f60;
}

.icon-big-maybe {
    color: #000;
}

.icon-big-no {
    color: #600;
}

/*reposition bootstrap modal element*/
.modal {
   top: 120px;
   right: 100px;
   bottom: 0;
   left: 0;
   z-index: 10040;
   overflow: auto;
   overflow-y: auto;
}

/*------------------------*/
/*---TICKETS SECTION ---*/
/*------------------------*/

.ticket-section {
    height: 40vh;
}

.btn-ticket-others {
    width: 90%;
}

.btn-ticket-self-1 {
    width: 65%;
}

.btn-ticket-self-2 {
    width: 25%;
}

